# ddos-martummai

./: .env.example  .gitignore  DATASETS.md  LICENSE  NOTICES.md  README.md  drive_oauth_token_generator.py  install.sh  nfpm.yaml  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: ci-cd.yml  report.yml  sonar.yml  workflow.yml
config/: config.example.yml  config.yml
labeler/: extractor.py  labeler.ipynb
labeler/dataset/parquet/: flow_logs.parquet
labeler/model/: baseline_features_list.joblib  baseline_gmm_model.joblib  baseline_scaler.joblib  baseline_threshold.joblib
scripts/: postinstall.sh  postremove.sh  preremove.sh
src/: checker_scripts.py
src/cicflowmeter/: constants.py  flow_session.py  sniffer.py  writer.py
src/cicflowmeter/features/: flow_bytes.py
src/cicflowmeter/features/context/: __init__.py
src/ddos_martummai/: authen.py  cli.py  config_loader.py  config_loader_old.py  core.py  detector.py  drive_uploader.py  init_models.py  logger.py  main.py  mitigation.py  mitigator.py  mitigator.py.save  monitor.py  preprocessing.py  preprocessor.py  reader.py  runtime_patch.py  setup_wizard.py
src/ddos_martummai/models/: model.joblib  scaler.joblib
src/ddos_martummai/static/: index.html  login.html  style-login.css  style.css
src/ddos_martummai/util/: constant.py  os_checker.py  path_helper.py
src/ddos_martummai/web/: authen.py  drift_monitor.py  monitor.py  router.py
src/ddos_martummai/web/static/: index.html  login.html
src/ddos_martummai/web/static/css/: style.css
src/ddos_martummai/web/static/js/: index.js  login.js
system/: ddos-martummai  ddos-martummai.service  logrotate.conf  martummai-setup  postinstall.sh  postremove.sh  preremove.sh  sudoers-ddos
tests/: test_config_loader.py  test_detector.py  test_init_models.py  test_main.py  test_mitigation.py  test_path_helper.py  test_placeholder_config.py  test_preprocessor.py  test_reader.py  test_setup_wizard.py  test_uploader.py
tests/fixtures/: sample_raw.csv
