[project]
name = "ddos-martummai"
version = "0.1.0"
description = "DDoS Detection System Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cicflowmeter @ git+https://github.com/hieulw/cicflowmeter.git@master",
    "click>=8.3.1",
    "click-option-group>=0.5.9",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "psutil>=7.2.1",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-psutil>=7.2.1.20260116",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
allow_redefinition = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "**/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[project.scripts]
ddos-martummai = "ddos_martummai.main:main"
checker = "checker_scripts:run_checks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddos_martummai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ddos_martummai/models/*.joblib"
]
